hphp/hack/test/typecheck/suspend_operator_err8.php
<?hh // strict

function f((coroutine function(): int) $v): int {
  // not ok - call to coroutine outside the suspend
  $a = $v();
  return 1;
}
